name:                huninvited
version:             1.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/huninvited#readme
license:             BSD3
license-file:        LICENSE
author:              Griever
maintainer:          romhack.github.io
copyright:           2017 Griever
category:            Compression
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable huninvited
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, containers, binary, parsec, parsec-numbers, split, binary-bits, monad-loops
  other-modules:       RomhackLib
  ghc-options:         -Wall
